--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -40,7 +40,8 @@ html(lang="en")
             h2.changeyourplan ОБЕРИ СВІЙ 
             h2.plan ПЛАН ПОДОРОЖІ
             p.firmadesc.small.text-muted Наша фірма – лідер на ринку
-          img.scroll-btm(src="img/scrollbottom.png", alt="")
+          a.scroll-btm(href="#target-section")
+            img(src="img/scrollbtm.svg", alt="Прокрутити вниз")
         .container
 .container.py-5
   .row.align-items-start
@@ -78,42 +79,36 @@ html(lang="en")
               h6 Особливе замовлення
               p.text-primarypricecard.mb-1 250 грн*
               p.text-mutedcard Індивідуальне замовлення під ваші побажання.
-        .row
-    .col-12.text-center.custom-spacing
-      a.seeallplans(href="#") Дивитись усі плани 
-        svg.seeallplanssvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
-      hr
+      .text-center.mt-3    
+        a.seeallplans.mb-3(href="#") Дивитись усі плани 
+          svg.seeallplanssvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
+    hr
 .section-hero
-  .container
-    .row.align-items-center
-      .col-md-4
-        img(src="img/Seaisland.webp", alt="Острів", class="img-fluid")
+  .container-hero
+    .container
+      .row
+        .col-12.col-lg-4
+          img(src="img/Seaisland.webp", alt="Острів")
+        .col-12.col-lg-8
+          h2.titletxt2 Дивовижний безлюдний острів, який зводить людей з розуму
+          .row
+            .col-12.col-md-8
+              p.titlefuu.mb-3 Пхукет - курортно-туристична Мекка Таїланду. Білосніжний пісок, і бірюзове море, і мальовничі скелі, а на них же, трохи вище - буйна тропічна рослинність. Все це можна побачити на власні очі.
+              .d-flex.gap-2.row
+                a.orange-btn.btn.btn-warning.col-sm.col-md.col-lg.mb-3(href="#") Замовити тур
+                a.bluebtn.btn.col-sm.col-md.col-lg.col-xl.mb-3(href="#") Детальніше
+            .col-12.col-md-4.pricecardd
+              .card-pricestyle
+                p.card-price 575 грн./день
+                p.underprice В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
 
-      .col-md-5
-        h2.hero-title.mb-3 Дивовижний безлюдний острів, який зводить людей з розуму
-        p.hero-subtext.mb-4
-          | Пхукет – курортно-туристична Мекка Таїланду.
-          br
-          | Білосніжний пісок, бірюзове море, і мальовничі скелі, а на них же, трохи вище – буйна тропічна рослинність. Все це можна побачити на власні очі.
-
-        .d-flex.gap-3.align-items-center.flex-wrap
-          a.btn-order.mb-3(href="#") ЗАМОВИТИ ТУР
-          a.btn-details.mb-3(href="#") ДЕТАЛЬНІШЕ
-
-      .col-md-3
-        .price-card.text-center
-          h5.price-title 575 грн./день
-          p.price-description
-            | В дану вартість входить
-            br
-            | обслуговування персоналу,
-            br
-            | вечері і захоплюючі історії.
 
 .section-surfer
   .overlay
   .container
     .row
+      main
+        section#target-section
       .col-md-6.left-content
         h2.text-uppercase.text-white СПІЙМАЙ ХВИЛЮ
         h2.text-uppercase.text-primary ЖИВИ ЯСКРАВО!
@@ -176,12 +171,12 @@ html(lang="en")
             p.price 1559 грн.
             a.makeorder(href="#") замовити
               svg.orangesvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
-    .col-12.col-sm-6.col-lg-3.kartka
+    .col-12.col-sm-6.col-lg-3.cardbtm
       .bottom-card
         .greenflag
         <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
         img(src="img/surfer2.png", alt="")
-        .bottom-body
+        .bottom-bodysurf
           p.title  Катання на сьорфінгу
           p.description.col-lg-12 Хочеш отримати екстрим та мега вражень одночасно? Тоді вперед ловити хвилі!
           .bottom-row.d-flex.align-items-center.justify-content-between
