--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,12 +3,13 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    link(rel="icon", type="image/png", href="img/favicon.png")
     link(rel="preconnect", href="https://fonts.googleapis.com")
     link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
     link(href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap", rel="stylesheet")
     link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css")
     link(rel="stylesheet", href="css/styles.css")
-    title Seatrips
+    title Seatrips chose your tour and enjoy!
 
   body
     header.header
@@ -43,7 +44,7 @@ html(lang="en")
           a.scroll-btm(href="#target-section")
             img(src="img/scrollbtm.svg", alt="Прокрутити вниз")
         .container
-.container.py-5
+section.container.py-5
   .row.align-items-start
     .col-lg-3.col-md-12.mb-4.d-flex.flex-column.justify-content-center.text-start
       h2.companytop.mb-2 ПРО НАШУ 
@@ -83,7 +84,7 @@ html(lang="en")
         a.seeallplans.mb-3(href="#") Дивитись усі плани 
           svg.seeallplanssvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
     hr
-.section-hero
+section.section-hero
   .container-hero
     .container
       .row
@@ -103,7 +104,7 @@ html(lang="en")
                 p.underprice В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
 
 
-.section-surfer
+section.section-surfer
   .overlay
   .container
     .row
@@ -126,7 +127,7 @@ html(lang="en")
             span.name.text-white.ms-3.olegname Олег Набережний
             p.underolegtxt клієнт
             
-.cardsbtm.container
+section.cardsbtm.container 
   h1.bottomblock Спеціальні пропозиції тижня 
   p.bottomh1blc Гарячі праозиції, по-швидше обирай і поїхали!
   .row.g-4.justify-content-center
@@ -134,7 +135,9 @@ html(lang="en")
       .bottom-card
         .greenflag
         <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
-        img(src="img/romantictrip.png", alt="")
+        picture 
+          source(srcset="img/romantictrip.png")
+          img(src="img/romantictrip.png", alt="")
         .bottom-body
           p.title Романтична подорож на 2
           p.description.col-lg-12 Подорож у найромантичніші куточки світу, занурить вас у дивовижні пейзажі природи.
@@ -146,7 +149,9 @@ html(lang="en")
     .col-12.col-sm-6.col-lg-3.cardbtm
       .bottom-card 
         .blueflag
-            img(src="img/bikercard.png", alt="")
+            picture
+              source(srcset="img/bikercard.png")
+              img(src="img/bikercard.png", alt="")
             p.rebellious.align-items-center
               <svg class="bikeonbgc" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M400 96a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm27.2 64l-61.8-48.8c-17.3-13.6-41.7-13.8-59.1-.3l-83.1 64.2c-30.7 23.8-28.5 70.8 4.3 91.6L288 305.1 288 416c0 17.7 14.3 32 32 32s32-14.3 32-32l0-128c0-10.7-5.3-20.7-14.2-26.6L295 232.9l60.3-48.5L396 217c5.7 4.5 12.7 7 20 7l64 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-52.8 0zM56 384a72 72 0 1 1 144 0A72 72 0 1 1 56 384zm200 0A128 128 0 1 0 0 384a128 128 0 1 0 256 0zm184 0a72 72 0 1 1 144 0 72 72 0 1 1 -144 0zm200 0a128 128 0 1 0 -256 0 128 128 0 1 0 256 0z"/></svg>
         .bottom-body
@@ -161,7 +166,9 @@ html(lang="en")
 
     .col-12.col-sm-6.col-lg-3.cardbtm
       .bottom-card
-        img(src="img/Trees.png", alt="")
+        picture
+          source(srcset="img/Trees.png")
+          img(src="img/Trees.png", alt="Дерева")
         .greenflag
         <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
         .bottom-body
@@ -175,11 +182,13 @@ html(lang="en")
       .bottom-card
         .greenflag
         <svg class="star" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"/></svg>
-        img(src="img/surfer2.png", alt="")
+        picture 
+          source(srcset="img/surfer2.png")
+          img(src="img/surfer2.png", alt="")
         .bottom-bodysurf
           p.title  Катання на сьорфінгу
-          p.description.col-lg-12 Хочеш отримати екстрим та мега вражень одночасно? Тоді вперед ловити хвилі!
-          .bottom-row.d-flex.align-items-center.justify-content-between
+          p.descriptionsurfer.col-lg-12 Хочеш отримати екстрим та мега вражень одночасно? Тоді вперед ловити хвилі!
+          .bottom-row.d-flex.align-items-center.justify-content-between.customvidstyp
             p.price 999 грн.
             a.makeorder(href="#") замовити
               svg.orangesvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
@@ -197,10 +206,11 @@ html(lang="en")
           .idklol
             p.small.sizefile Розмір файла: 10Mb
             p.undersffirst Розклад роботи усіх наших готелів, можете знайти за цим посиланням. Та додатково завантажити їх фото.
+            .customspacingfirst
             a.btn.btn-warning.btnfooter(href="#") 
               <svg class="cloudfirst" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z"/></svg>
               | Скачати
-      .col-12.col-md-6.col-lg-3.mb-3.nicecard
+      section.col-12.col-md-6.col-lg-3.mb-3.nicecard
         .firstfooter-card2
           .bgccard.d-flex
             img.cardbgc2
@@ -209,6 +219,7 @@ html(lang="en")
           .idklol
             p.small.sizefile Розмір файла: 10Mb
             p.undersf У будь-якому нашому турі включені сніданки у вартість. Якщо ж бажаєте замовити додатково, то ознайомтесь з умовами.
+            .customspacing2
             a.btn.btn-warning.btnfooter(href="#")
               <svg class="cloud2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z"/></svg>
               | Скачати
