--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,3 +1,5 @@
+@import components/mixin
+  
 * 
   margin: 0
   padding: 0
@@ -5,26 +7,23 @@
   
 html
   scroll-behavior: smooth  
-  
-  @media (min-width: 2560px)
-    font-size: 20px
-
-html, body
-  overflow-x: hidden
-
+  +media(1921)
+    font-size: 19px
 body
   background-color: #f5f8fa
-  font-family: 'Rubik', sans-serif
+  font-family: 'Rubik'
+  
+html, body
+  overflow-x: hidden
 
 header
   position: relative
   background: url('../img/shipbgc.jpg') no-repeat center/cover
   background-position: bottom
 
-  .container
-    position: relative
-    z-index: 3
-
+.container
+  position: relative
+  z-index: 3
 
 .menutop .container
   display: flex
@@ -84,7 +83,7 @@ header
   margin-top: 1rem
 
 .titletxt
-  font-size: 72px
+  font-size: 50px
   letter-spacing: 1px
   line-height: 110px
   text-transform: uppercase
@@ -92,6 +91,9 @@ header
   font-weight: 400
   font-family: "Rubik"
   text-align: center
+  +media(1440)
+    font-size: 72
+
 
 .section-border
   position: relative
@@ -105,10 +107,10 @@ header
     border-right: 4px solid rgba(252, 252, 252, 1)
 
   &:before
-    top: -40px
-    left: 35%
-    width: 30%
-    height: 50px
+    top: -20px
+    left: 40%
+    width: 20.5%
+    height: 30px
     border-top: 4px solid rgba(252, 252, 252, 1)
 
   &:after
@@ -199,7 +201,6 @@ header
     display: block
     margin-bottom: 0.5rem
   
-
   h6 
     padding-top: 15px
     font-weight: 450
@@ -311,10 +312,7 @@ hr
   border: none
   border-radius: 20px
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15)
-  width: max-content
-  white-space: nowrap
   transition: all 0.2s ease-in-out
-
   &:hover 
     background-color: #3b9aed
     color: #fff
@@ -323,7 +321,6 @@ hr
 h2
   font-size: 36px
   line-height: 42px
-  text-transform: uppercase
   color: #333333
   font-weight: 400
   font-family: "Rubik"
@@ -331,7 +328,6 @@ h2
 .hero-text
   font-style: italic
   
-
 .btn
   text-transform: uppercase
   font-weight: 500
@@ -342,6 +338,8 @@ h2
 .card-pricestyle
   padding: 15px
   background-color: #edf2f5
+  +media(576)
+    margin-bottom: 45px
 
 .card-price
   font-size: 24px
@@ -367,97 +365,84 @@ h2
   p 
     font-size: 0.95rem
   
-
-  .btn 
-    text-transform: uppercase
-    min-width: 160px
-    padding: 10px 20px
-    font-weight: 600
-  
-
-  .btn-outline-primary 
-    text-transform: uppercase
-    border-width: 2px
-  
-
   .bg-light 
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.05)
 
 .section-hero
   position: relative
 
-  .content-block
-    position: relative
+.content-block
+  position: relative
 
-    .hero-title
-      font-size: 2.2rem
-      font-weight: 400
-      margin-bottom: 1rem
+.hero-title
+  font-size: 2.2rem
+  font-weight: 400
+  margin-bottom: 1rem
 
-    .hero-text
-      font-size: 1rem
-      color: #212529
-      line-height: 1.5
-      margin-bottom: 1.5rem
+.hero-text
+  font-size: 1rem
+  color: #212529
+  line-height: 1.5
+  margin-bottom: 1.5rem
 
-    .hero-buttons
-      display: flex
-      align-items: center
-      gap: 20px
+.hero-buttons
+  display: flex
+  align-items: center
+  gap: 20px
 
-      @media (max-width: 768px)
-        flex-direction: column
-        align-items: flex-start
-        gap: 12px
+  @media (max-width: 768px)
+    flex-direction: column
+    align-items: flex-start
+    gap: 12px
 
-      .btn-order
-        text-decoration: none
-        text-transform: uppercase
-        background-color: #ffc107
-        color: #fff
-        font-weight: 600
-        font-size: 14px
-        padding: 9.5px 39.2px
-        border-radius: 25px
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15)
-        white-space: nowrap
-        transition: all 0.2s ease-in-out
+.btn-order
+  text-decoration: none
+  text-transform: uppercase
+  background-color: #ffc107
+  color: #fff
+  font-weight: 600
+  font-size: 14px
+  padding: 9.5px 39.2px
+  border-radius: 25px
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15)
+  white-space: nowrap
+  transition: all 0.2s ease-in-out
 
-        &:hover
-          background-color: #3b9aed
-          color: #fff
+  &:hover
+    background-color: #3b9aed
+    color: #fff
 
-      .btn-detail
-        text-decoration: none
-        text-transform: uppercase
-        background-color: transparent
-        color: #3b9aed
-        font-weight: 600
-        font-size: 14px
-        padding: 9.5px 39.2px
-        border-radius: 25px
-        border: 1px solid #3b9aed
-        white-space: nowrap
-        transition: all 0.3s ease
+.btn-detail
+  text-decoration: none
+  text-transform: uppercase
+  background-color: transparent
+  color: #3b9aed
+  font-weight: 600
+  font-size: 14px
+  padding: 9.5px 39.2px
+  border-radius: 25px
+  border: 1px solid #3b9aed
+  white-space: nowrap
+  transition: all 0.3s ease
 
-        &:hover
-          background-color: #3b9aed
-          color: #fff
+  &:hover
+    background-color: #3b9aed
+    color: #fff
 
-    .price-box 
-      padding: 15px
+.price-box 
+  padding: 15px
 
-      .price
-        font-size: 18px
-        font-weight: 600
-        color: #0d6efd
-        display: block
-        margin-bottom: 0.5rem
+.price
+  font-size: 18px
+  font-weight: 600
+  color: #0d6efd
+  display: block
+  margin-bottom: 0.5rem
 
-      .note
-        font-size: 14px
-        color: #444
-        line-height: 1.6
+.note
+  font-size: 14px
+  color: #444
+  line-height: 1.6
 
 .text-muted
   text-align: center
@@ -477,10 +462,8 @@ h1, .text-primaryunderh1
   border-radius: 10px
   object-fit: cover
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1)
-
 @media (max-width: 768px)
   .hero-image
-    max-width: 100%
     margin-bottom: 20px
 
 
@@ -600,40 +583,23 @@ h1, .text-primaryunderh1
     background-color: #0d6efd
     color: #fff
 
-@media (max-width: 576px)
   .btn-order,
   .detail-btn,
   .btn-details
-    display: block
-    width: 100%
-    padding: 10px 0
-    font-size: 13px
-    margin-bottom: 10px
-    white-space: normal
-
-
-@media (max-width: 576px)
-  .price-card
-    width: 100%
+    +media(576)
+      display: block
+      width: 100%
+      padding: 10px 0
+      font-size: 13px
+      margin-bottom: 10px
+      white-space: normal
 
 
 
 .section-surfer
   background: url('../img/surfer.webp') center/cover no-repeat
   color: #fff
-  padding: 100px 0
-  position: relative
-  z-index: 1
-
-  .container
-    max-width: 1200px
-    margin: 0 auto
-    padding: 0 15px
-    display: flex
-    flex-direction: row
-    gap: 50px
-    align-items: center
-    justify-content: space-between
+  padding: 50px 0
 
 .testimonial
   position: relative
@@ -648,8 +614,10 @@ h1, .text-primaryunderh1
   z-index: 1
 
 .anna-card
-  padding: 50px 50px
   position: relative
+  padding: 50px 28px
+
+
 
 .anna-card:before                                                                
   content: ""                    
@@ -661,6 +629,7 @@ h1, .text-primaryunderh1
   border-left: 4px solid #ffb700
   border-top: 4px solid #ffb700
   border-bottom: 4px solid #ffb700
+
 
 .anna-card:after
   content: ""
@@ -734,7 +703,6 @@ h1, .text-primaryunderh1
 
   .hero-text
     margin: 20px 0
-    max-width: 500px
     font-size: 16px
 
   .btn-hero
@@ -757,7 +725,7 @@ h1, .text-primaryunderh1
 .text-uppercase
   font-size: 56px
   letter-spacing: 2px
-  line-height: 66px
+  line-height: 56px
   text-transform: uppercase
   color: #09f
   font-weight: 400
@@ -766,7 +734,7 @@ h1, .text-primaryunderh1
 .section
   padding: 40px 0
 
-.description
+.description, .descriptionsurfer
   text-align: left
   padding-left: 7px 
   font-size: 13px
@@ -774,6 +742,12 @@ h1, .text-primaryunderh1
   color: #999999
   font-weight: 400
   font-family: "Rubik"
+
+.descriptionsurfer
+  +media(1200)
+    padding-bottom: 0
+  +media(992)
+    padding-bottom: 19px
 
 .orangesvg
   position: absolute
@@ -784,8 +758,7 @@ h1, .text-primaryunderh1
 
 .titlefuu 
   font-style: italic
-  padding-top: 7px
-  padding-left: 7px 
+  padding-top: 12px
   font-size: 18px
   line-height: 22px
   color: #333333
@@ -800,7 +773,7 @@ h1, .text-primaryunderh1
   color: #333333
   font-weight: 400
   font-family: "Rubik"
-  
+
 .titlevelo
   margin-top: 0
   padding-left: 7px 
@@ -816,7 +789,6 @@ h1, .text-primaryunderh1
 
   h2
     font-size: 2rem
-    text-transform: uppercase
     color: #333
     font-family: "Rubik"
     font-weight: 400
@@ -859,6 +831,7 @@ h1, .text-primaryunderh1
   text-align: center
 
 .bottomh1blc
+  padding-bottom: 25px
   font-size: 16px
   line-height: 24px
   color: #333
@@ -978,7 +951,6 @@ p.rebellious
 
 .btnfooter
   background-color: transparent
-  text-transform: uppercase
   text-decoration: none
   color: #ffb700
   font-weight: 500
@@ -1000,6 +972,7 @@ p.rebellious
   height: 40px
 
 .sizefile
+  padding-left: 40px
   font-size: 13px
   line-height: 19px
   color: #bbb
@@ -1017,7 +990,7 @@ p.rebellious
   left: 36px
 
 .undersffirst
-  padding-bottom: 15px
+  padding-bottom: 26px
   font-size: 13px
   line-height: 19px
   color: #fff
@@ -1035,29 +1008,43 @@ p.rebellious
   transition: all 1s ease
 
 .aboutus
+  text-align: center
+  text-transform: uppercase
   @media (max-width: 988px)
     text-align: center
 
+.customspacingfirst
+  +media(1200)
+    padding-bottom: 23px
+
+.customspacing2
+  +media(1200)
+    padding-bottom: 25px
+  +media(1199)
+    padding-bottom: 21px
+  +media(992)
+    padding-bottom: 21px  
+  +media(768)
+    padding-bottom: 5px  
+
 .undersf
+  padding-bottom: 5px
   font-size: 13px
   line-height: 19px
   color: #fff
   font-weight: 400
-  font-family: "Rubik"
 
 .firstfooter-card
-  position: relative
-  box-sizing: border-box
-  padding: 20px 15px
   background: url('../img/hotelschedule.png') no-repeat center/cover
 
 .firstfooter-card2
-  position: relative
-  box-sizing: border-box
-  padding: 20px 13px
   background: url('../img/infoeat.png') no-repeat center/cover
 
-
+.firstfooter-card,
+.firstfooter-card2
+  position: relative
+  box-sizing: border-box
+  padding: 20px 15px
 
 .footer-text
   padding: 15px 15px
@@ -1066,22 +1053,3 @@ p.rebellious
 
 .footerblock
   background-color: #000
-
-.nicecard
-  padding-bottom: 30px
-
-.bottom-bodysurf 
-  @media (max-width: 768px) 
-    width: 222px
-    height: 167px
-
-
-.bottom-bodysurf
-  @media (max-width: 1199px) 
-    width: 222px
-    height: 197px
-  @media (max-width: 768px)
-    width: 100%
-    height: auto
-    padding: 15px
-
