--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -95,9 +95,10 @@ section.section-hero
           .row
             .col-12.col-md-8
               p.titlefuu.mb-3 Пхукет - курортно-туристична Мекка Таїланду. Білосніжний пісок, і бірюзове море, і мальовничі скелі, а на них же, трохи вище - буйна тропічна рослинність. Все це можна побачити на власні очі.
-              .d-flex.gap-2.row
-                a.orange-btn.btn.btn-warning.col-sm.col-md.col-lg.mb-3(href="#") Замовити тур
-                a.bluebtn.btn.col-sm.col-md.col-lg.col-xl.mb-3(href="#") Детальніше
+              .col-12
+                .button-group
+                  a.orange-btn.btn.btnorange(href="#") Замовити тур
+                  a.bluebtn.btn(href="#") Детальніше
             .col-12.col-md-4.pricecardd
               .card-pricestyle
                 p.card-price 575 грн./день
@@ -210,7 +211,7 @@ section.cardsbtm.container
             a.btn.btn-warning.btnfooter(href="#") 
               <svg class="cloudfirst" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z"/></svg>
               | Скачати
-      section.col-12.col-md-6.col-lg-3.mb-3.nicecard
+      main.col-12.col-md-6.col-lg-3.mb-3.nicecard
         .firstfooter-card2
           .bgccard.d-flex
             img.cardbgc2
