--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -28,7 +28,6 @@ html(lang="en")
               li.nav-item: a.nav-link.ttxt(href="#") партнери
               li.nav-item: a.nav-link.ttxt(href="#") відгуки
               li.nav-item: a.nav-link.ttxt(href="#") контакти
-
       .seatripstext
         .container
           .section-border
@@ -84,33 +83,34 @@ section.container.py-5
         a.seeallplans.mb-3(href="#") Дивитись усі плани 
           svg.seeallplanssvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
     hr
-section.section-hero
-  .container-hero
-    .container
-      .row
-        .col-12.col-lg-4
-          img(src="img/Seaisland.webp", alt="Острів")
-        .col-12.col-lg-8
-          h2.titletxt2 Дивовижний безлюдний острів, який зводить людей з розуму
-          .row
-            .col-12.col-md-8
-              p.titlefuu.mb-3 Пхукет - курортно-туристична Мекка Таїланду. Білосніжний пісок, і бірюзове море, і мальовничі скелі, а на них же, трохи вище - буйна тропічна рослинність. Все це можна побачити на власні очі.
-              .col-12
-                .button-group
-                  a.orange-btn.btn.btnorange(href="#") Замовити тур
-                  a.bluebtn.btn(href="#") Детальніше
-            .col-12.col-md-4.pricecardd
-              .card-pricestyle
-                p.card-price 575 грн./день
-                p.underprice В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
+section.section-hero.py-5
+  .container
+    .row.align-items-stretch
+      .col-12.col-lg-4
+       .h-100
+        picture 
+          source(srcset="img/seaa.png")
+          img.imgfix.img-fluid(src="img/seaa.webp", alt="Острів")
+      .col-12.col-lg-8.d-flex.flex-column.justify-content-center
+        h2.titletxt2.mb-3 Дивовижний безлюдний острів, який зводить людей з розуму
+        .row
+          .col-12.col-md-8
+            p.titlefuu.mb-3 Пхукет - курортно-туристична Мекка Таїланду. Білосніжний пісок, і бірюзове море, і мальовничі скелі, а на них же, трохи вище - буйна тропічна рослинність. Все це можна побачити на власні очі.
+            .button-group.d-flex.gap-2.mb-3
+              a.orange-btn.btn.btn-warning(href="#") Замовити тур
+              a.bluebtn.btn.btn-outline-primary(href="#") Детальніше
+          .col-12.col-md-4.pricecardd
+            .card-pricestyle.p-3.bg-light.rounded.text-center
+              p.card-price.text-primary.fw-bold.mb-1 575 грн./день
+              p.underprice.text-muted.small В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
+
 
 
 section.section-surfer
   .overlay
   .container
     .row
-      main
-        section#target-section
+      section#target-section
       .col-md-6.left-content
         h2.text-uppercase.text-white СПІЙМАЙ ХВИЛЮ
         h2.text-uppercase.text-primary ЖИВИ ЯСКРАВО!
@@ -224,7 +224,7 @@ section.cardsbtm.container
             a.btn.btn-warning.btnfooter(href="#")
               <svg class="cloud2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z"/></svg>
               | Скачати
-      .col-12.col-lg-3
+      .col-12.col-lg-3.classanna
         .anna-card.text-center
           h3.question задати питання
           p.saygoodday.col-lg-9.mx-auto Скажіть доброго для нашого консультанту, і ми з радістю відповімо на Ваші запитання
@@ -235,8 +235,8 @@ section.cardsbtm.container
           p.anna Анна Миколаївна
           p.annatext консультант
           img.annasvg(src="img/anna.svg", alt="")
-.footertop
-
-.footerblock
-  .footer-text  © 2016 Cars.com All rights reserved.
+footer
+  .footertop
+  .footerblock
+    .footer-text  © 2016 Cars.com All rights reserved.
 script(src="js/scripts.js")
