--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -70,6 +70,7 @@ header
   height: 50px
 .card-body
   padding: 0
+
 .seatripstext
   font-size: 16px
   line-height: 24px
@@ -1112,5 +1113,7 @@ p.rebellious
 .classanna
   @media ( max-width: 320px )
     padding-top: 25px
+
 .imgfix
+  padding-bottom: 25px
   width: 100%
