--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -101,7 +101,7 @@ section.section-hero.py-5
               a.bluebtn.btn.btn-outline-primary(href="#") Детальніше
           .col-12.col-md-4.pricecardd
             .card-pricestyle.p-3.bg-light.rounded.text-center
-              p.card-price.text-primary.fw-bold.mb-1 575 грн./день
+              p.card-price.text-primary.mb-1 575 грн./день
               p.underprice.text-muted.small В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
 
 
@@ -186,7 +186,7 @@ section.cardsbtm.container
         picture 
           source(srcset="img/surfer2.png")
           img(src="img/surfer2.png", alt="")
-        .bottom-bodysurf
+        .bottom-body
           p.title  Катання на сьорфінгу
           p.descriptionsurfer.col-lg-12 Хочеш отримати екстрим та мега вражень одночасно? Тоді вперед ловити хвилі!
           .bottom-row.d-flex.align-items-center.justify-content-between.customvidstyp
@@ -196,9 +196,9 @@ section.cardsbtm.container
   hr      
   .container
     .row
-      .col-xs-12.col-lg-3.px-0
+      .col-xs-12.col-lg-12.col-xl-3.px-0
         h2.aboutus Додаткова інформація
-      .col-12.col-md-6.col-lg-3.mb-3.nicecard
+      .col-md-6.col-lg-4.col-xl-3.mb-3.nicecard
         .firstfooter-card
           .d-flex
             img.cardbgc
@@ -211,7 +211,7 @@ section.cardsbtm.container
             a.btn.btn-warning.btnfooter(href="#") 
               <svg class="cloudfirst" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z"/></svg>
               | Скачати
-      main.col-12.col-md-6.col-lg-3.mb-3.nicecard
+      .col-md-6.col-lg-4.col-xl-3.mb-3.nicecard
         .firstfooter-card2
           .bgccard.d-flex
             img.cardbgc2
@@ -224,7 +224,7 @@ section.cardsbtm.container
             a.btn.btn-warning.btnfooter(href="#")
               <svg class="cloud2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path d="M144 480C64.5 480 0 415.5 0 336c0-62.8 40.2-116.2 96.2-135.9c-.1-2.7-.2-5.4-.2-8.1c0-88.4 71.6-160 160-160c59.3 0 111 32.2 138.7 80.2C409.9 102 428.3 96 448 96c53 0 96 43 96 96c0 12.2-2.3 23.8-6.4 34.6C596 238.4 640 290.1 640 352c0 70.7-57.3 128-128 128l-368 0zm79-167l80 80c9.4 9.4 24.6 9.4 33.9 0l80-80c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-39 39L344 184c0-13.3-10.7-24-24-24s-24 10.7-24 24l0 134.1-39-39c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9z"/></svg>
               | Скачати
-      .col-12.col-lg-3.classanna
+      .col-12.col-lg-4.col-xl-3.col-xxl-3.classanna
         .anna-card.text-center
           h3.question задати питання
           p.saygoodday.col-lg-9.mx-auto Скажіть доброго для нашого консультанту, і ми з радістю відповімо на Ваші запитання
