--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -94,6 +94,7 @@ header
   font-family: "Rubik"
   text-align: center
   +media(1440)
+    padding-bottom: 25px
     font-size: 72px
   +media(319)
     line-height: 65px
