--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -39,7 +39,7 @@ html(lang="en")
           .scroll-section
             h2.changeyourplan ОБЕРИ СВІЙ 
             h2.plan ПЛАН ПОДОРОЖІ
-            p.firmadesc.small.text-muted Наша фірма – лідер на ринку
+            p.firmadesc.small Наша фірма – лідер на ринку
           a.scroll-btm(href="#target-section")
             img(src="img/scrollbtm.svg", alt="Прокрутити вниз")
         .container
@@ -83,7 +83,7 @@ section.container.py-5
         a.seeallplans.mb-3(href="#") Дивитись усі плани 
           svg.seeallplanssvg <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM294.6 151.2c-4.2-4.6-10.1-7.2-16.4-7.2C266 144 256 154 256 166.3l0 41.7-96 0c-17.7 0-32 14.3-32 32l0 32c0 17.7 14.3 32 32 32l96 0 0 41.7c0 12.3 10 22.3 22.3 22.3c6.2 0 12.1-2.6 16.4-7.2l84-91c3.5-3.8 5.4-8.7 5.4-13.9s-1.9-10.1-5.4-13.9l-84-91z"/></svg>
     hr
-section.section-hero.py-5
+section.section-hero
   .container
     .row.align-items-stretch
       .col-12.col-lg-4
@@ -100,7 +100,7 @@ section.section-hero.py-5
               a.orange-btn.btn.btn-warning(href="#") Замовити тур
               a.bluebtn.btn.btn-outline-primary(href="#") Детальніше
           .col-12.col-md-4.pricecardd
-            .card-pricestyle.p-3.bg-light.rounded.text-center
+            .card-pricestyle.p-3
               p.card-price.text-primary.mb-1 575 грн./день
               p.underprice.text-muted.small В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
 
