--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -31,8 +31,7 @@ header
   justify-content: space-between
 
 .navbar-light
-  padding-bottom: 80px 
-
+  padding-bottom: 80px  
 
 .navbar
   padding-top: 15px 
@@ -68,6 +67,7 @@ header
 
 .logo
   height: 50px
+
 .card-body
   padding: 0
 
@@ -81,8 +81,8 @@ header
   padding-bottom: 60px
 
 .firmadesc
+  padding-top: 15px
   font-style: italic
-  margin-top: 1rem
 
 .titletxt
   font-size: 50px
@@ -114,15 +114,15 @@ header
 
   &:before
     top: -40px
-    left: 40%
-    width: 20.5%
+    left: 36%
+    width: 28.5%
     height: 30px
     border-top: 4px solid rgba(252, 252, 252, 1)
 
   &:after
-    top: 283px
-    left: 40%
-    width: 20.5%
+    top: 250px
+    left: 36%
+    width: 28.5%
     height: 120px
     border-bottom: 4px solid rgba(252, 252, 252, 1)
 
@@ -240,8 +240,7 @@ header
   transition: 0.3s ease
 
   @media (max-width: 320px)
-    padding: 4px 0
-    font-size: 0.85rem
+    width: 100%
 
 .button-group
   display: flex
@@ -273,10 +272,9 @@ header
 .seeallplans
   text-align: right
   padding-right: 4px
+  padding-bottom: 35px 
   text-decoration: none
   transition: .5s ease
-
-.seeallplans
   justify-content: center  
   display: inline-flex
   align-items: center
@@ -498,7 +496,6 @@ h2
   line-height: 1.6
 
 .text-muted
-  padding-top: 15px
   text-align: center
 
 h1, .text-primaryunderh1
@@ -813,13 +810,6 @@ p
   +media(992)
     padding-bottom: 19px
 
-.orangesvg
-  position: absolute
-  bottom: 17px
-  width: 12px
-  height: 12px
-  fill: #ffb906
-
 .titlefuu 
   font-style: italic
   padding-top: 12px
@@ -838,6 +828,9 @@ p
   color: #333333
   font-weight: 400
   font-family: "Rubik"
+  @media( max-width: 1200px  )
+    padding-top: 0
+    font-size: 18px
 
 .titlevelo
   margin-top: 0
@@ -872,11 +865,16 @@ p
   color: #0099ff
   font-weight: 400
   font-family: "Rubik"
+  @media( max-width: 991px )
+    font-size: 24px
+  @media( max-width: 1200px )
+    font-size: 18px
+    
 
 .makeorder
   position: relative
   padding-right: 15px
-  padding-bottom: 12px
+  padding-bottom: 6px
   font-size: 14px
   letter-spacing: 1px
   text-transform: uppercase
@@ -885,6 +883,25 @@ p
   text-decoration: none
   font-family: "Rubik"
   text-align: center
+  transition: .5s ease
+  &:hover
+    color: #09f
+    transition: .5s ease
+
+  svg
+    position: absolute
+    bottom: 11px
+    transition: .5s ease 
+    width: 12px
+    height: 12px
+    fill: #ffb906
+    transition: fill .5s ease
+
+  &:hover
+    fill: #09f
+
+    svg
+      fill: #09f
 
 .bottomblock
   font-size: 36px
